Fixed the width and align of the button in header

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -109,6 +109,7 @@ nav a {
 }
 /* TODO Hay que añadirle padding top para que no tenga conflicto con el nav bar */
 .info-header{
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   padding: 2rem ;
@@ -125,16 +126,15 @@ nav a {
   padding: 1.25rem 3rem;
 }
 header{
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+  /* height: 100vh; */
+  /* background:  url(../assets/img/bg-header.png) no-repeat; */
+  background-size: contain;
 }
 header >img{
   width: 100%;
   justify-self: flex-end;
 }
-.info-header button{
+.info-header{
   max-width: 440px;
 }
 .section__info h2{
